--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@fang-kang/js-tool",
+  "name": "@fang-kang/js-utils",
   "private": false,
   "version": "1.0.0",
   "packageManager": "pnpm@7.6.0",
@@ -16,15 +16,19 @@
   "scripts": {
     "rollup": "rollup -c rollup.config.js",
     "prepublishOnly": "npm run rollup",
-    "release": "release-it"
+    "release": "release-it",
+    "docs:dev": "vitepress dev docs --port 3100",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs",
+    "watchChangeRestartVitepress": "node ./docs/.vitepress/watchChangeRestartVitepress.mjs"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fang-kang/js-tool"
+    "url": "https://github.com/fang-kang/js-utils"
   },
   "homepage": "https://github.com/fang-kang/js-tool/readme",
   "bugs": {
-    "url": "https://github.com/fang-kang/js-tool/issues"
+    "url": "https://github.com/fang-kang/js-utils/issues"
   },
   "keywords": [
     "js-tool",
@@ -35,7 +39,10 @@
     "@commitlint/cli": "^17.5.0",
     "@commitlint/config-conventional": "^17.4.4",
     "@release-it/conventional-changelog": "^5.1.1",
+    "@types/markdown-it": "^12.2.3",
+    "@types/node": "^18.15.6",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "chokidar": "^3.5.3",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -43,13 +50,19 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "flexsearch": "^0.7.31",
     "husky": "^8.0.3",
+    "markdown-it-custom-attrs": "^1.0.2",
     "prettier": "^2.8.6",
     "release-it": "^15.9.1",
     "rollup": "^3.20.1",
     "rollup-plugin-typescript2": "^0.34.1",
     "tslib": "^2.5.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "vite": "^4.2.1",
+    "vite-plugin-vitepress-demo": "2.0.0-alpha.8",
+    "vitepress": "1.0.0-alpha.61",
+    "vitepress-plugin-search": "1.0.4-alpha.19"
   },
   "commitlint": {
     "extends": [
