--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "type": "git",
     "url": "https://github.com/fang-kang/js-utils"
   },
-  "homepage": "https://github.com/fang-kang/js-tool/readme",
+  "homepage": "https://fang-kang.github.io/js-utils",
   "bugs": {
     "url": "https://github.com/fang-kang/js-utils/issues"
   },
