--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "release-it": "^15.9.1",
     "rimraf": "^4.4.1",
     "rollup": "^3.20.1",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "rollup-plugin-typescript2": "^0.34.1",
     "tslib": "^2.5.0",
     "typescript": "^5.0.2",
